--- a/app/src/main/res/values/attri.xml
+++ b/app/src/main/res/values/attri.xml
@@ -9,4 +9,12 @@
     <!-- 作用同系统的 fitsSystemWindows -->
     <attr name="fitsSystemWindows" format="boolean"/>
 
+    <!-- 自定义状态栏的属性 -->
+    <declare-styleable name="CustomStatusBarView">
+        <!-- 总是显示，作用相当于 fitSystemWindows -->
+        <attr name="showAlways" format="boolean"/>
+        <!-- 在指定的安卓系统版本以上显示，仅当 showAlways 为 false 时 -->
+        <attr name="showAfterSdkVersionInt" format="integer"/>
+    </declare-styleable>
+
 </resources>
