--- a/dialog/src/main/res/layout/dialog_confirm.xml
+++ b/dialog/src/main/res/layout/dialog_confirm.xml
@@ -46,7 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_toLeftOf="@id/Dialog_Bottom_Line"
-                    android:text="取消"
+                    android:text="@string/dialog_cancel"
                     android:textSize="17dp"
                     android:textColor="@color/dlg_cancel_but"
                     android:background="@drawable/btn_dlg_left_radius"
@@ -56,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_toRightOf="@id/Dialog_Bottom_Line"
-                    android:text="确定"
+                    android:text="@string/dialog_ok"
                     android:textSize="17dp"
                     android:textColor="@color/dlg_action_but"
                     android:background="@drawable/btn_dlg_right_radius"
