--- a/dialog/src/main/res/layout/dialog_update_normal.xml
+++ b/dialog/src/main/res/layout/dialog_update_normal.xml
@@ -18,7 +18,7 @@
             android:layout_height="48dp"
             android:gravity="center"
             android:textStyle="bold"
-            android:text="更新"
+            android:text="@string/dialog_update"
             android:textSize="18dp"
             android:textColor="#281616"/>
 
@@ -42,7 +42,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/btn_dlg_single_stroke"
-            android:text="不再提示"
+            android:text="@string/dialog_no_longer"
             android:textSize="16.5dp"
             android:textColor="@color/dlg_cancel_but"/>
 
@@ -55,7 +55,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/btn_dlg_single_stroke"
-            android:text="稍后更新"
+            android:text="@string/dialog_next_time"
             android:textSize="16.5dp"
             android:textColor="@color/dlg_cancel_but"/>
 
@@ -69,7 +69,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/btn_dlg_single_stroke"
             android:textStyle="bold"
-            android:text="立即更新"
+            android:text="@string/dialog_update_now"
             android:textSize="16.5dp"
             android:textColor="@color/dlg_action_but"/>
 
