--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,10 +74,41 @@
                 android:id="@+id/item5"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
-                app:sLeftTextString="项目五"
+                app:sLeftTextString="Number list picker"
                 app:sRightIconRes="@mipmap/right_arrow"
                 app:sRightIconMarginRight="10dp"
                 app:sBackgroundDrawableRes="@drawable/btn_clickable"
+                app:sBottomLineMargin="10dp"/>
+
+            <com.allen.library.SuperTextView
+                android:id="@+id/item6"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                app:sLeftTextString="Simple item picker"
+                app:sRightIconRes="@mipmap/right_arrow"
+                app:sRightIconMarginRight="10dp"
+                app:sBackgroundDrawableRes="@drawable/btn_clickable"
+                app:sBottomLineMargin="10dp"/>
+
+            <com.allen.library.SuperTextView
+                android:id="@+id/item7"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                app:sLeftTextString="City picker"
+                app:sRightIconRes="@mipmap/right_arrow"
+                app:sRightIconMarginRight="10dp"
+                app:sBackgroundDrawableRes="@drawable/btn_clickable"
+                app:sBottomLineMargin="10dp"/>
+
+            <com.allen.library.SuperTextView
+                android:id="@+id/item8"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                app:sLeftTextString="Date picker"
+                app:sRightIconRes="@mipmap/right_arrow"
+                app:sRightIconMarginRight="10dp"
+                app:sBackgroundDrawableRes="@drawable/btn_clickable"
+                app:sBottomLineMargin="10dp"
                 app:sLineShow="none"/>
 
         </LinearLayout>
