--- a/splash/src/main/res/layout/activity_abstract_webview.xml
+++ b/splash/src/main/res/layout/activity_abstract_webview.xml
@@ -22,6 +22,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text=""
             android:textColor="#ffffff"
             android:textSize="18dp"/>
