--- a/dialog/src/main/res/layout/dialog_poster.xml
+++ b/dialog/src/main/res/layout/dialog_poster.xml
@@ -11,10 +11,11 @@
 
         <ImageView
             android:id="@+id/Dialog_Image"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:scaleType="centerCrop"
